fixed window overflow

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1,27 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,300;1,400;1,600;1,700&display=swap');
-@import 'swiper/swiper.scss';
 
-// Breakpoints
-$bp-small: 48em; // 768px
-$bp-medium: 64em; // 1024px
-$bp-large: 85.375em; // 1366px
-$bp-xlarge: 120em; // 1920px
-$bp-xxlarge: 160em; // 2560px
-
-// Media Queries
-$mq-small: "(min-width: #{$bp-small})";
-$mq-medium: "(min-width: #{$bp-medium})";
-$mq-large: "(min-width: #{$bp-large})";
-$mq-xlarge: "(min-width: #{$bp-xlarge})";
-$mq-xxlarge: "(min-width: #{$bp-xxlarge})";
-$mq-retina: "(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)";
-
-// Font-Size
+// // Font-Size
 $base-font-size: 1em;
-
-// Line-Height
-// $base-line-height: 1.5;
-// $header-line-height: 1.25;
 
 %title-box-options {
   width: 100%;
@@ -42,8 +22,8 @@ $base-font-size: 1em;
   }
 }
 
-body {
-font-size: $base-font-size;
+%content-options {
+  padding: 0 5em;
 }
 
 html {
@@ -51,15 +31,17 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   scroll-behavior: smooth;
-  font-family: 'Open Sans';
-}
+  font-family: 'Open Sans';}
+  
 
 header {
   background: #264653;
   height: 60px;
+  max-width: 100vw;
   width: 100%;
+  display: grid;
   position: fixed;
-  z-index: 1000 !important;
+  z-index: 1;
 }
 
 footer {
@@ -82,20 +64,19 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(to bottom,#264653, #333333);
   color: white;
+  font-size: $base-font-size;
 }
 
 .title-container {
   width: 100%;
   height: 100vh;
   position: relative;
-
 }
 
 .title-video {
   width: 100%;
   display: flex;
   overflow: hidden;
-  align-items: center;
   justify-content: center;
   
     video {
@@ -107,7 +88,6 @@ body {
       @media (min-aspect-ratio: 16/9) {
       min-height: 100vh;  
       max-height: 105vh;
-      width: 100%;
       }
       @media (min-aspect-ratio: 21/9) {
       max-height: 100vh;
@@ -144,16 +124,16 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding-top: 2em;
-  // height: 100vh;
+  padding-top: 3em;
+  padding: 0 5em;
 
     @media (min-aspect-ratio: 16/9) {
       height: 100vh;
     }
 
-    // @media (min-aspect-ratio: 21/9) {
-    //   padding: 0 240px;
-    // }
+    @media (min-aspect-ratio: 21/9) {
+      padding: 0 240px;
+    }
 
   .career-container {
     display: flex;
@@ -178,11 +158,6 @@ body {
     align-items: center;
     width: 100%;
 
-    // h3 {
-    //   width: 100%;
-    //   justify-self: center;
-    // }
-
     p {
       align-self: stretch;
       width: 100%;
@@ -199,29 +174,10 @@ body {
 #projects {
   @extend %content-container-options;
   flex-direction: column;
+  justify-content: stretch;
   height: 100vh;
-  padding: 1vh 0;
+  padding-top: 4em;
 
-  .swiper-container {
-    width: 100%;
-    height: auto;
-
-    @media (min-aspect-ratio: 16/9) {
-      width: 600px;
-      height: auto;
-    }
-  
-    video {
-      width: 100%;
-      height: auto;
-    }
-    
-    iframe {
-      width: 100%;
-      height: auto;
-      min-height: 200px;
-    }
-  }
 }
 
 #contact {
@@ -238,30 +194,7 @@ a:visited {
   text-decoration: none;
 }
 
-p {
-  padding: 0 5em;
-  
-  // @media (min-aspect-ratio: 21/9) {
-  // padding: 0 15em;
-  // }
-}
-
 .italic {
   font-style: italic;
 }
-
-// h1 {
-//   font-size: 2em;
-//   margin-bottom: 0;
-// }
-
-h2 {
-  padding: 0 5em;
-}
-
-h4 {
-  padding: 0 5em;
-}
-
-
 
